[package]
name = "trunk-template"
version = "0.1.0"
edition = "2021"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
gloo = "0.10.0"
js-sys = "0.3.65"
uuid = { version = "1.5.0", features = ["v4"] }
wasm-bindgen = "0.2.88"
web-sys = { version = "0.3.65", features = [
        "Crypto", 
        "Window", 
        "DomRect", 
        "Element", 
        "EventTarget", 
        "AddEventListenerOptions", 
        "ScrollIntoViewOptions",
        "ScrollBehavior"
] }
yew = { version="0.20", features=["csr"] }
